--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,5 @@
 <ul class="nav" role="menu">
     <li class="nav-home" role="menuitem"><a href="{{site.baseurl}}">Home</a></li>
-    <li class="nav-about" role="menuitem"><a href="{{site.baseurl}}about/">About</a></li>
-    <li class="nav-getting-started" role="menuitem"><a href="{{site.baseurl}}tag/getting-started/">Getting Started</a></li>
-    <li class="nav-try-ghost" role="menuitem"><a href="https://ghost.org">Try Ghost</a></li>
+    <li class="nav-getting-started" role="menuitem"><a href="{{site.baseurl}}tag/projects/">Projects</a></li>
+    <li class="nav-signup" role="menuitem"><a href="https://www.signup-form-here.edu">Sign Up</a></li>
 </ul>
