--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <ul class="nav" role="menu">
     <li class="nav-home" role="menuitem"><a href="{{site.baseurl}}">Home</a></li>
     <li class="nav-getting-started" role="menuitem"><a href="{{site.baseurl}}tag/projects/">Projects</a></li>
-    <li class="nav-signup" role="menuitem"><a href="https://www.signup-form-here.edu">Sign Up</a></li>
+    <li class="nav-signup" role="menuitem"><a href="https://goo.gl/forms/ZQUM4Q2W01OhJm4I2">Sign Up</a></li>
 </ul>
